020 ==> 370705 - Current Album is deselected when clearing search bar.
021 ==> 407232 - Swith from list to display with enter.
022 ==> 407262 - Face tagging doesn't work with rotation.
023 ==> 407345 - Verbose debug messages.
024 ==> 407334 - Accented characters not taken into account google photos.
025 ==> 406594 - Interface becomes irresponsive for a while after editing metadata in search panel.
026 ==> 407357 - Print Creator Gimp 2.10. not recgonized.
027 ==> 397865 - Current GIMP version cannot be selected.
028 ==> 407440 - After export to google photo, metadata are written to sidecar files (and perhaps to picture file too).
029 ==> 401100 - Release plan text not readable.
030 ==> 360475 - Open in file manager for individual images.
031 ==> 407565 - Entering multi tags to the same photo failed.
032 ==> 378112 - No progress bar while maint initializes.
033 ==> 407699 - Text format for "add tag" and "remove tag" is inconsistent.
034 ==> 407736 - Status Bar Not Visible in Full Screen.
035 ==> 407806 - Applied reverse geocoding are not saved.
036 ==> 407946 - Duplicates search should perform the search automatically.
037 ==> 407947 - Crash while updating fingerprints.
038 ==> 407993 - Feature request: feedback when deleting unassigned tags in Tag Manager.
039 ==> 407958 - In Thumbnail View Creation date is not correct.
040 ==> 407948 - Option to configure temp directory.
041 ==> 387770 - Plugin Instructions Unreadable in Some Themes.
042 ==> 397599 - Usability deteriorated.
043 ==> 388359 - Icons on the toolbar are not visible when background is dark.
044 ==> 408147 - From LightTable, "Open" picture does not open the right one.
045 ==> 408157 - "Tone Color Picker" cursor is not correctly positionned vs Mouse.
046 ==> 408095 - Sort items by manual.
047 ==> 378364 - Sequence number options need date-aware modifier.
048 ==> 408213 - '+' symbol is a legitimate win10 file character but unable to enter it into digiKam via Rename.
049 ==> 