@@ -56,4 +56,5 @@ BUGFIXES:
 046 ==> 408095 - Sort items by manual.
 047 ==> 378364 - Sequence number options need date-aware modifier.
 048 ==> 408213 - '+' symbol is a legitimate win10 file character but unable to enter it into digiKam via Rename.
-049 ==> 
+049 ==> 408261 - In Metadata editor, "Ok" and "Apply" buttons should save changes for all tabs, not just the active one.
+050 ==> 
